kustomize-incomplete/uptime-kuma/ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      meta.helm.sh/release-name: uptime-kuma
      meta.helm.sh/release-namespace: uptime-kuma
      nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
      nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
      nginx.ingress.kubernetes.io/server-snippets: |
        location / {
          proxy_set_header Upgrade $http_upgrade;
          proxy_http_version 1.1;
          proxy_set_header X-Forwarded-Host $http_host;
          proxy_set_header X-Forwarded-Proto $scheme;
          proxy_set_header X-Forwarded-For $remote_addr;
          proxy_set_header Host $host;
          proxy_set_header Connection "upgrade";
          proxy_set_header X-Real-IP $remote_addr;
          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
          proxy_set_header   Upgrade $http_upgrade;
          proxy_cache_bypass $http_upgrade;
        }
    creationTimestamp: "2024-10-11T13:27:37Z"
    generation: 1
    labels:
      app.kubernetes.io/instance: uptime-kuma
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: uptime-kuma
      app.kubernetes.io/version: 1.23.13
      helm.sh/chart: uptime-kuma-2.20.0
      k8slens-edit-resource-version: v1
    name: uptime-kuma
    namespace: uptime-kuma
    resourceVersion: "17111830"
    uid: 5367f148-57c8-4678-af5b-17ae7a998259
  spec:
    ingressClassName: traefik
    rules:
    - host: uptime.stillon.top
      http:
        paths:
        - backend:
            service:
              name: uptime-kuma
              port:
                number: 3001
          path: /
          pathType: ImplementationSpecific
    tls:
    - hosts:
      - uptime.stillon.top
      secretName: uptime.stillon.top-tls
  status:
    loadBalancer:
      ingress:
      - ip: 161.97.88.129
kind: List
metadata:
  resourceVersion: ""
