kustomize-incomplete/uptime-kuma/service.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      meta.helm.sh/release-name: uptime-kuma
      meta.helm.sh/release-namespace: uptime-kuma
    creationTimestamp: "2024-10-11T13:27:37Z"
    labels:
      app.kubernetes.io/instance: uptime-kuma
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: uptime-kuma
      app.kubernetes.io/version: 1.23.13
      helm.sh/chart: uptime-kuma-2.20.0
    name: uptime-kuma
    namespace: uptime-kuma
    resourceVersion: "17110732"
    uid: a6cb83b5-ecc7-4912-850b-10fdee65f7e8
  spec:
    clusterIP: 10.43.89.65
    clusterIPs:
    - 10.43.89.65
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: http
      port: 3001
      protocol: TCP
      targetPort: 3001
    selector:
      app.kubernetes.io/instance: uptime-kuma
      app.kubernetes.io/name: uptime-kuma
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
